--- a/App/Supporting Files/Localizable.strings
+++ b/App/Supporting Files/Localizable.strings
@@ -6,7 +6,7 @@
   Copyright © 2017 Jochen Pfeiffer. All rights reserved.
 */
 
-"Camera" = "Camera"
-"Cancel" = "Cancel"
-"Delete" = "Delete"
-"Photo Library" = "Photo Library"
+"Camera" = "Camera";
+"Cancel" = "Cancel";
+"Delete" = "Delete";
+"Photo Library" = "Photo Library";
