show first sticker alert

--- a/App/Supporting Files/de.lproj/Localizable.strings
+++ b/App/Supporting Files/de.lproj/Localizable.strings
@@ -1,5 +1,7 @@
 "Cancel" = "Abbrechen";
 "Delete" = "Löschen";
+"FirstStickerAlertMessage" = "Öffne die Photo Stickers iMessage App innerhalb der iOS Nachrichten App.";
+"FirstStickerAlertTitle" = "Deine Stickers sind nun für Nachrichten verfügbar";
 /* image picker source type: camera */
 "ImagePickerSourceTypeCamera" = "Kamera";
 /* image picker source type: photo library */
